--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "noImplicitUseStrict": true,
         "noUnusedLocals": true,
         "baseUrl": ".",
-        "lib": ["es5", "es2015.promise", "dom"],
+        "lib": ["es5", "es2015.promise", "dom", "es2015"],
         "paths": {
             "N": ["node_modules/@hitc/netsuite-types/N"],
             "N/*": ["node_modules/@hitc/netsuite-types/N/*"]
