--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,18 +1,38 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
+    "windows": {
+        "options": {
+            "shell": {
+                "executable": "cmd.exe",
+                "args": ["/d", "/c"]
+            }
+        }
+    },
     "tasks": [
         {
-            "label": "Typescript Watch",
-            "command": "tsc",
-            "args": [
-                "--watch"
-            ],
+            "label": "tsc",
+            "type": "shell",
+            "command": "tsc -w -p ./tsconfig.json",
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "runOptions": {
+                "runOn": "folderOpen"
+            },
+            "options": {
+                "shell": {}
             }
+        },
+        {
+            "type": "npm",
+            "script": "lint",
+            "problemMatcher": [],
+            "label": "npm: lint",
+            "detail": "eslint -c .eslintrc.js --ext .ts src",
+            "runOptions": {
+                "runOn": "folderOpen"
+            },
         }
     ]
 }
