uncommenting task as it seems to run on workplace open regardless

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,15 +24,15 @@
                 "shell": {}
             }
         },
-        {
-            "type": "npm",
-            "script": "lint",
-            "problemMatcher": [],
-            "label": "npm: lint",
-            "detail": "eslint -c .eslintrc.js --ext .ts src",
-            "runOptions": {
-                "runOn": "folderOpen"
-            },
-        }
+        // {
+        //     "type": "npm",
+        //     "script": "lint",
+        //     "problemMatcher": [],
+        //     "label": "npm: lint",
+        //     "detail": "eslint -c .eslintrc.js --ext .ts src",
+        //     "runOptions": {
+        //         "runOn": "folderOpen"
+        //     },
+        // }
     ]
 }
