accepted eslint migration

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,8 +4,10 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+        "christopherwxyz.netsuitesdf",
         "dcortes92.freemarker",
-        "dbaeumer.vscode-eslint"
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode"
     ],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
